@@ -177,11 +177,11 @@ module Ruport
           :status => :fatal, :exception => ArgumentError, :level => :log_only
         end
       end
-    end
-
-    def method_missing(id,*args)
-      f = id.to_s.gsub(/=$/,'')
-      return super unless fields.include?(f)
-      args.empty? ? self[f] : self[f] = args[0]
-    end
+    
+      def method_missing(id,*args)
+        f = id.to_s.gsub(/=$/,'')
+        return super unless fields.include?(f)
+        args.empty? ? self[f] : self[f] = args[0]
+      end
+  end
 end
